add: distributed systems

--- a/docs/distributed_systems/04_2pc.md
+++ b/docs/distributed_systems/04_2pc.md
@@ -1,1 +1,35 @@
 # 2 Phase Commit
+
+The Two-Phase Commit (2PC) protocol is a distributed algorithm used to ensure all participants in a distributed transaction either commit or abort the transaction, maintaining consistency across the system.
+
+## Key Concepts
+
+- **Coordinator:** The node that manages the commit process.
+- **Participant:** Nodes that take part in the transaction and respond to the coordinator.
+- **Atomicity:** Ensures that all nodes agree on the outcome (commit or abort).
+
+## 2PC Phases
+
+1. **Prepare Phase:**  
+   - The coordinator sends a prepare request to all participants, asking if they can commit.
+   - Each participant replies with a vote: "Yes" (ready to commit) or "No" (cannot commit).
+
+2. **Commit Phase:**  
+   - If all participants vote "Yes," the coordinator sends a commit message, and all participants commit the transaction.
+   - If any participant votes "No," the coordinator sends an abort message, and all participants abort the transaction.
+
+## Safety and Fault Tolerance
+
+- 2PC ensures atomicity but is not fault-tolerant: if the coordinator fails during the commit phase, participants may be left in an uncertain state (blocking problem).
+- 2PC does not handle network partitions or Byzantine faults.
+
+## Use Cases
+
+- Distributed databases
+- Distributed transaction processing
+- Financial systems requiring atomic operations
+
+## Further Reading
+
+- [Two-Phase Commit Protocol (Wikipedia)](https://en.wikipedia.org/wiki/Two-phase_commit_protocol)
+- [Distributed Systems: Principles and Paradigms (Tanenbaum & van Steen)](https://www.distributed-systems.net/index.php/books/ds2/)
