feat: computer networks

--- a/docs/computer_networks/07_ip.md
+++ b/docs/computer_networks/07_ip.md
@@ -1,1 +1,102 @@
 # IP
+
+The Internet Protocol (IP) operates at the network layer (Layer 3) of the OSI model. It is responsible for addressing, routing, and delivering packets across interconnected networks.
+
+## Key Concepts
+
+- **IP Addressing:** Each device on a network is assigned a unique IP address (IPv4 or IPv6) for identification and communication.
+- **Packet Switching:** Data is divided into packets, each routed independently through the network.
+- **Best-Effort Delivery:** IP does not guarantee delivery, order, or error correction; these are handled by higher layers.
+
+## IP Versions
+
+- **IPv4:** 32-bit addresses (e.g., 192.168.1.1), supports ~4.3 billion addresses.
+- **IPv6:** 128-bit addresses (e.g., 2001:0db8::1), supports a vastly larger address space.
+
+## Routing
+
+Routing is the process of selecting paths for traffic in a network. Routers use routing tables and protocols to determine the best path for each packet.
+
+### Types of Routing
+
+- **Static Routing:** Manually configured routes.
+- **Dynamic Routing:** Routes are automatically updated using routing protocols.
+
+## Routing Algorithms
+
+### Distance Vector Routing
+
+- **How it Works:** Each router maintains a table (vector) of the best-known distance to each destination and periodically shares this table with its neighbors.
+- **Updates:** Routers update their tables based on information from neighbors, using algorithms like Bellman-Ford.
+- **Pros:** Simple to implement, low overhead.
+- **Cons:** Slower convergence, susceptible to routing loops and the "count-to-infinity" problem.
+- **Example Protocol:** RIP (Routing Information Protocol).
+- **Operation:** Routers send periodic updates to neighbors, advertising their routing tables. Each entry contains the destination network, distance (hop count), and the next hop. If a router receives a better (shorter) path, it updates its table. If a route becomes unreachable, routers increment the distance until it reaches infinity (route is removed).
+
+### Link State Routing
+
+- **How it Works:** Each router has a complete map of the network's topology. Routers exchange information about the state of their links (connections) with all other routers.
+- **Updates:** Routers use algorithms like Dijkstra's to compute the shortest path to each destination.
+- **Pros:** Faster convergence, more scalable, less prone to routing loops.
+- **Cons:** More complex, higher memory and CPU usage.
+- **Example Protocol:** OSPF (Open Shortest Path First).
+- **Operation:** Routers flood link-state advertisements (LSAs) throughout the network, describing their directly connected links. Each router builds a link-state database and computes the shortest path tree to all destinations using Dijkstra's algorithm.
+
+## Inter-AS and Intra-AS Routing
+
+### Intra-AS Routing (Interior Gateway Protocols, IGP)
+
+- **Definition:** Routing within a single Autonomous System (AS), typically under one administrative domain.
+- **Protocols:** RIP, OSPF, EIGRP, IS-IS.
+- **Characteristics:** Optimized for fast convergence and scalability within an organization or ISP.
+
+### Inter-AS Routing (Exterior Gateway Protocols, EGP)
+
+- **Definition:** Routing between different Autonomous Systems, often between ISPs or large organizations.
+- **Protocol:** BGP (Border Gateway Protocol).
+- **Characteristics:** Focuses on policy-based routing, scalability, and stability across the global Internet. BGP routers exchange reachability information and select routes based on policies, not just shortest path.
+
+### Common Routing Protocols
+
+- **RIP (Routing Information Protocol):** Distance-vector protocol, simple but limited scalability.
+- **OSPF (Open Shortest Path First):** Link-state protocol, widely used in large enterprise networks.
+- **EIGRP (Enhanced Interior Gateway Routing Protocol):** Cisco proprietary, combines features of distance-vector and link-state.
+- **BGP (Border Gateway Protocol):** Path-vector protocol, used for routing between autonomous systems on the Internet.
+
+#### BGP (Border Gateway Protocol)
+
+- Used to exchange routing information between different organizations (autonomous systems).
+- Ensures data can travel across the global Internet.
+- Supports policy-based routing and path selection.
+
+## Useful IP and Routing Commands
+
+### Linux/macOS
+
+- `ip addr` or `ifconfig` — Show IP addresses and interfaces.
+- `ip route` or `route -n` — Display routing table.
+- `ping <address>` — Test connectivity to another host.
+- `traceroute <address>` — Show the path packets take to a destination.
+- `netstat -rn` — Display routing tables.
+- `nslookup <domain>` or `dig <domain>` — DNS lookup.
+
+### Windows
+
+- `ipconfig` — Show IP configuration.
+- `route print` — Display routing table.
+- `ping <address>` — Test connectivity.
+- `tracert <address>` — Trace route to a host.
+- `nslookup <domain>` — DNS lookup.
+
+## Use Cases
+
+- Internet communication
+- Enterprise and campus networks
+- Cloud networking
+
+## Further Reading
+
+- [RFC 791: Internet Protocol (IPv4)](https://datatracker.ietf.org/doc/html/rfc791)
+- [RFC 2460: Internet Protocol, Version 6 (IPv6)](https://datatracker.ietf.org/doc/html/rfc2460)
+- [BGP Explained](https://datatracker.ietf.org/doc/html/rfc4271)
+- [Cisco IP Routing Guide](https://www.cisco.com/c/en/us/td/docs/ios-xml/ios/iproute_pi/configuration/xe-3s/iri-xe-3s-book/iri-overview.html)
